--- a/Pages/Creazioni/Creazioni.css
+++ b/Pages/Creazioni/Creazioni.css
@@ -15,7 +15,7 @@
 
 * {
     font-family: 'American-type', sans-serif;
-
+    text-decoration: none;
 }
 
 .mobile-navbar {
@@ -84,6 +84,10 @@ li:hover {
     margin: 20px auto;
 }
 
+a {
+    color: black;
+}
+
 
 /* ------------------------------------------------------- */
 
@@ -112,6 +116,7 @@ li:hover {
         text-align: center;
         width: 100%;
     }
+
 
     li:nth-child(2) {
         margin: 10px auto !important;
