--- a/Pages/chi-siamo/chi-siamo.css
+++ b/Pages/chi-siamo/chi-siamo.css
@@ -16,6 +16,7 @@
 * {
     font-family: 'American-type', sans-serif;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 a {
@@ -26,14 +27,9 @@ h1 {
     margin: 0;
 }
 
-ul {
-    padding: 0;
-}
 
 li {
-    float: left;
     list-style: none;
-    margin: 1rem 0;
     box-sizing: border-box;
 }
 
@@ -42,12 +38,7 @@ li:nth-child(2) {
 }
 
 
-ul {
-    margin: 0;
-}
-
 li:hover {
-    margin-bottom: 0;
     border-bottom: 5px solid #F9E248;
 }
 
@@ -63,6 +54,7 @@ img {
 .bold {
     font-weight: bold;
     font-size: 1.5rem;
+    margin: 0;
 }
 
 .navbar {
@@ -206,6 +198,7 @@ img {
         flex-direction: column;
         padding: 0;
         justify-content: center;
+        align-items: center;
         text-align: center;
         width: 100%;
     }
@@ -294,7 +287,7 @@ img {
 
 }
 
-@media ((min-width: 810px) and (max-width: 1300px)) {
+@media ((min-width: 810px) and (max-width: 3200px)) {
     .box-creazioni {
         width: 100%;
 
@@ -305,17 +298,27 @@ img {
         justify-content: center;
     }
 
-
     li:nth-child(2) {
-        margin: 15px 300px !important;
+        margin: 0px 300px !important;
     }
 
+    li {
+        width: 150px;
+        text-align: center;
+        padding: 10px;
 
-    .margin-start {
-        margin-left: 150px;
     }
 
-    .margin-end {
-        margin-left: 300px;
+    .nav-big-screen {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    a {
+        width: 100%;
     }
 }
