--- a/Pages/Creazioni/Creazioni.css
+++ b/Pages/Creazioni/Creazioni.css
@@ -63,16 +63,24 @@ h1 {
     align-items: center;
 }
 
+.mobile-box-creazioni {
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #F9E248;
+}
+
 .black-box {
     width: 30%;
     max-height: 50%;
     margin: 50px 0;
-    background-color: black;
+    /* background-color: black; */
 }
 
-li:hover {
-    margin-bottom: 0;
-    border-bottom: 5px solid #F9E248;
+li:hover a {
+    text-decoration: underline;
+    text-decoration-color: #F9E248;
+    text-decoration-thickness: 5px;
 }
 
 .creazione-navbar {
@@ -106,9 +114,9 @@ a {
     }
 
     .creazione-navbar {
-        display: none;
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     .box-creazioni {
@@ -131,8 +139,13 @@ a {
     .black-box {
         width: 100%;
         max-height: 50%;
-        margin: 50px 0;
-        background-color: black;
+        /* background-color: black; */
+    }
+
+    .photos-box {
+        padding: 0;
+        margin: 0 auto;
+        width: 100%;
     }
 
     li:nth-child(2) {
@@ -229,4 +242,7 @@ li {
         text-align: center;
     }
 
+    .mobile-box-creazioni {
+        display: none;
+    }
 }
