--- a/Pages/Creazioni/Creazioni.css
+++ b/Pages/Creazioni/Creazioni.css
@@ -148,14 +148,16 @@ a {
         width: 100%;
     }
 
-    li:nth-child(2) {
-        margin: 10px auto !important;
-    }
+
 
     li {
         width: 60%;
         height: 40px;
-        margin: 0 auto;
+    }
+
+    a {
+        width: 100%;
+        margin-bottom: 100px;
     }
 }
 
@@ -164,9 +166,9 @@ li:nth-child(2) {
 }
 
 li {
-    width: 60%;
+    width: 100%;
     height: 40px;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 
 @media ((min-width: 500px) and (max-width: 800px)) {
@@ -177,6 +179,7 @@ li {
     .creazione-navbar {
         display: flex;
         align-items: center;
+        height: 100%;
     }
 
     .box-creazioni {
@@ -194,9 +197,7 @@ li {
         width: 100%;
     }
 
-    li:nth-child(2) {
-        margin: 10px auto !important;
-    }
+
 
     li {
         width: 50%;
@@ -215,12 +216,14 @@ li {
     }
 
     li:nth-child(2) {
-        margin: 10px 300px !important;
+        align-self: flex-start;
     }
 
+
     li {
-        width: 150px;
+        width: 80%;
         text-align: center;
+        margin-bottom: 100px;
     }
 
     a {
@@ -232,6 +235,7 @@ li {
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        width: 100%;
         margin: 0;
         padding: 0;
     }
