--- a/Pages/chi-siamo/chi-siamo.css
+++ b/Pages/chi-siamo/chi-siamo.css
@@ -33,9 +33,6 @@ li {
     box-sizing: border-box;
 }
 
-li:nth-child(2) {
-    margin: 1rem 30rem !important;
-}
 
 
 li:hover a {
@@ -62,7 +59,6 @@ img {
 
 .navbar {
     display: flex;
-    justify-content: center;
 }
 
 
@@ -90,7 +86,12 @@ img {
 
 .text-box {
     border: 1px solid black;
-    width: 480px
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 5px;
+    font-weight: bold;
 }
 
 .body-box {
@@ -168,6 +169,11 @@ img {
         display: none;
     }
 
+    .text-box {
+        width: 100%;
+        font-size: 1.1rem;
+    }
+
     .text {
         font-size: 32px;
     }
@@ -194,6 +200,7 @@ img {
     .creazione-navbar {
         display: flex;
         align-items: center;
+        margin: 10px auto;
     }
 
     .box-creazioni {
@@ -218,7 +225,7 @@ img {
     }
 
     li {
-        width: 60%;
+        width: 80%;
         height: 40px;
         margin: 0 auto;
     }
@@ -301,32 +308,27 @@ img {
 @media ((min-width: 810px) and (max-width: 3200px)) {
     .box-creazioni {
         width: 100%;
-
     }
 
 
     .navbar {
-        align-items: center;
-        justify-content: center;
+        width: 100%;
     }
 
-    li:nth-child(2) {
-        margin: 0px 300px !important;
-    }
+
 
     li {
-        width: 150px;
+        width: 70%;
         text-align: center;
         padding: 10px;
+        cursor: pointer;
 
     }
 
     .nav-big-screen {
+        width: 100%;
         display: flex;
-        margin: 10px;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         margin: 0;
         padding: 0;
     }
@@ -334,4 +336,18 @@ img {
     a {
         width: 100%;
     }
+
+    .text-box {
+        width: 70%;
+        margin: 0;
+        padding: 10px;
+        line-height: 40px;
+    }
+
+    .wth {
+        width: 60%;
+    }
+
+
+
 }
